<resources>
    <string name="app_name">sweetanikca</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Login_tittle">Iniciar sesión</string>
    <string name="login_button">Iniciar</string>
    <string name="User_name">Nombre de usuario</string>
    <string name="User_password">Contraseña</string>
    <string name="sweetanikca">Sweet Anikca</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="comments">Comentarios</string>
    <string name="Home_menu">Home</string>
    <string name="Home_title">Home</string>
</resources>